java/step3/.circleci/kubernetes/hello-world-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: docker-registry.default.svc:5000/devweek-marem/hello-world
        imagePullPolicy: Always
        ports:
        - containerPort: 80
